desenv_tests/test-assets/field/failure/separator_value_not_char.rs
use desenv::Desenv;

#[derive(Desenv)]
struct Config {
    #[desenv(separator = 1)]
    field: String
}

fn main(){}